deploy/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-app
spec:
  selector:
    matchLabels:
      app: product-app
  replicas: 1
  template:
    metadata:
      labels:
        app: product-app
    spec:
      imagePullSecrets:
        - name: product-key
      containers:
        - name: product-app
          image: djlxs/<IMAGE_NAME>:<VERSION>
          ports:
            - containerPort: 80
