deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <NAME>-<VERSION>
spec:
  selector:
    app: <NAME>-<VERSION>
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
