deploy/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: app-ingress.info
      http:
        paths:
        - backend:
            service:
              name: product-app
              port:
                number: 80
          path: /
          pathType: Prefix
