deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <NAME>-<VERSION>
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "<CANARY>"
    nginx.ingress.kubernetes.io/canary-by-cookie: "<CANARY_COOKIE>"
spec:
  rules:
    - host: app2-ingress.info
      http:
        paths:
        - backend:
            service:
              name: <NAME>-<VERSION>
              port:
                number: 80
          path: /
          pathType: Prefix
